crates/type_checker/src/tests/snapshots/def_func_extern.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 358
expression: "(test[1], res)"
---
- "\nextern fn foo()\n"
- Ok:
    nodes:
      - Stmt:
          Fn:
            proto:
              name: foo
              args: []
              ret_ty: ~
            body: ~

