crates/type_checker/src/tests/snapshots/def_func_main_exits_int32_1.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 386
expression: "(test[1], res)"
---
- "\nfn main() { }\n"
- Ok:
    nodes:
      - Stmt:
          Fn:
            proto:
              name: main
              args: []
              ret_ty: Int32
            body:
              Block:
                list:
                  - Expr:
                      Lit:
                        value:
                          Int32: 0
                        ty: Int32
                ty: Void

