crates/type_checker/src/tests/snapshots/def_func_main_exits_int32_3.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 384
expression: "(test[1], res)"
---
- "\nfn main() -> float { 1.0 }\n"
- Ok:
    nodes:
      - Stmt:
          Fn:
            proto:
              name: main
              args: []
              ret_ty: Int32
            body:
              Expr:
                Block:
                  list:
                    - Expr:
                        Lit:
                          value:
                            Float: 1.0
                          ty: Float
                    - Expr:
                        Lit:
                          value:
                            Int32: 0
                          ty: Int32
                  ty: Float

