crates/type_checker/src/tests/snapshots/def_func_main_void.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 369
expression: "(test[1], res)"
---
- "\nfn main() { }\n"
- Ok:
    nodes:
      - node:
          Fn:
            proto:
              name: main
              args: []
              ret_ty: void
              is_extern: false
            body:
              node:
                Block:
                  list: []
              ty: Void
        ty: ~

