crates/type_checker/src/tests/snapshots/for_antn_mismatch_2.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 467
expression: "(test[1], res)"
---
- "\nfn foo() {\n    let y: int8 = 2\n    for x: int = y; x < 2; 1 {\n        x\n    }\n}\n"
- Err: "Initial type mismatch in for statement. Annotated with `int32` but value is `int8`"

