crates/type_checker/src/tests/snapshots/for_basic.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 467
expression: "(test[1], res)"
---
- "\nfn foo() {\n    for x: int8 = 1; x < 2; 1 {\n        x\n    }\n}\n"
- Ok:
    nodes:
      - Stmt:
          Fn:
            proto:
              name: foo
              args: []
              ret_ty: Void
            body:
              Block:
                list:
                  - Stmt:
                      For:
                        start_name: x
                        start_antn: Int8
                        start_expr:
                          Lit:
                            value:
                              Int8: 1
                            ty: Int8
                        cond_expr:
                          BinOp:
                            sym: Lt
                            lhs:
                              Expr:
                                Ident:
                                  name: x
                                  ty: Int8
                            rhs:
                              Expr:
                                Lit:
                                  value:
                                    Int8: 2
                                  ty: Int8
                            ty: Bool
                        step_expr:
                          Lit:
                            value:
                              Int8: 1
                            ty: Int8
                        body:
                          Block:
                            list:
                              - Expr:
                                  Ident:
                                    name: x
                                    ty: Int8
                            ty: Int8
                ty: Void

