crates/type_checker/src/tests/snapshots/for_for_shadowing2.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 454
expression: "(test[1], res)"
---
- "\nfn foo() {\n    let x: [int32; 3] = [1, 2, 3]\n    x[0]\n    for x: int8 = 1; x < 2; 1 {\n        x\n    }\n    x\n}\n"
- Ok:
    nodes:
      - Stmt:
          Fn:
            proto:
              name: foo
              args: []
              ret_ty: Void
            body:
              Expr:
                Block:
                  list:
                    - Stmt:
                        Let:
                          name: x
                          antn:
                            Array:
                              - Int32
                              - 3
                          init:
                            Expr:
                              Lit:
                                value:
                                  Array:
                                    elements:
                                      - Expr:
                                          Lit:
                                            value:
                                              Int32: 1
                                            ty: Int32
                                      - Expr:
                                          Lit:
                                            value:
                                              Int32: 2
                                            ty: Int32
                                      - Expr:
                                          Lit:
                                            value:
                                              Int32: 3
                                            ty: Int32
                                    inner_ty: Int32
                                ty:
                                  Array:
                                    - Int32
                                    - 3
                    - Expr:
                        Index:
                          binding:
                            Expr:
                              Ident:
                                name: x
                                ty:
                                  Array:
                                    - Int32
                                    - 3
                          idx:
                            Expr:
                              Lit:
                                value:
                                  Int32: 0
                                ty: Int32
                          ty: Int32
                    - Stmt:
                        For:
                          start_name: x
                          start_antn: Int8
                          start_expr:
                            Expr:
                              Lit:
                                value:
                                  Int8: 1
                                ty: Int8
                          cond_expr:
                            Expr:
                              BinOp:
                                op: Lt
                                lhs:
                                  Expr:
                                    Ident:
                                      name: x
                                      ty: Int8
                                rhs:
                                  Expr:
                                    Lit:
                                      value:
                                        Int8: 2
                                      ty: Int8
                                ty: Bool
                          step_expr:
                            Expr:
                              Lit:
                                value:
                                  Int8: 1
                                ty: Int8
                          body:
                            Expr:
                              Block:
                                list:
                                  - Expr:
                                      Ident:
                                        name: x
                                        ty: Int8
                                ty: Int8
                    - Expr:
                        Ident:
                          name: x
                          ty: Int8
                  ty: Int8

